best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -991,7 +991,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org39aecac">
+<table id="org8271a15">
 
 
 <colgroup>
@@ -1064,11 +1064,51 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
+<td class="org-right">5</td>
+<td class="org-left">黄飞超</td>
+<td class="org-right">13</td>
+<td class="org-right">9</td>
+<td class="org-right">7</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">王海波</td>
+<td class="org-right">40</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">饶展源</td>
+<td class="org-right">32</td>
+<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">段文锋</td>
+<td class="org-right">21</td>
+<td class="org-right">21</td>
+<td class="org-right">10</td>
+</tr>
+
+<tr>
 <td class="org-right">1</td>
 <td class="org-left">谭鑫</td>
 <td class="org-right">24</td>
 <td class="org-right">7</td>
 <td class="org-right">11</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">李泽俊</td>
+<td class="org-right">11</td>
+<td class="org-right">25</td>
+<td class="org-right">12</td>
 </tr>
 
 <tr>
@@ -1081,10 +1121,26 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">5</td>
-<td class="org-left">黄飞超</td>
-<td class="org-right">13</td>
-<td class="org-right">9</td>
+<td class="org-left">郭榕荣</td>
+<td class="org-right">16</td>
+<td class="org-right">31</td>
+<td class="org-right">14</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">刘广鸿</td>
 <td class="org-right">7</td>
+<td class="org-right">24</td>
+<td class="org-right">15</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">段京文</td>
+<td class="org-right">18</td>
+<td class="org-right">27</td>
+<td class="org-right">16</td>
 </tr>
 
 <tr>
@@ -1092,15 +1148,23 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-left">李耀武</td>
 <td class="org-right">12</td>
 <td class="org-right">10</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">17</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">贝俊霖</td>
+<td class="org-right">9</td>
+<td class="org-right">19</td>
+<td class="org-right">18</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
-<td class="org-left">肖义珥</td>
-<td class="org-right">5</td>
-<td class="org-right">11</td>
+<td class="org-left">韦金良</td>
+<td class="org-right">4</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">19</td>
 </tr>
 
 <tr>
@@ -1108,6 +1172,14 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-left">古远东</td>
 <td class="org-right">14</td>
 <td class="org-right">12</td>
+<td class="org-right">20</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">肖义珥</td>
+<td class="org-right">5</td>
+<td class="org-right">11</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1161,26 +1233,10 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">4</td>
-<td class="org-left">贝俊霖</td>
-<td class="org-right">9</td>
-<td class="org-right">19</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
 <td class="org-left">卢德涛</td>
 <td class="org-right">31</td>
 <td class="org-right">20</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">段文锋</td>
-<td class="org-right">21</td>
-<td class="org-right">21</td>
-<td class="org-right">10</td>
 </tr>
 
 <tr>
@@ -1201,34 +1257,10 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">3</td>
-<td class="org-left">刘广鸿</td>
-<td class="org-right">7</td>
-<td class="org-right">24</td>
-<td class="org-right">15</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">李泽俊</td>
-<td class="org-right">11</td>
-<td class="org-right">25</td>
-<td class="org-right">12</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
 <td class="org-left">唐景富</td>
 <td class="org-right">15</td>
 <td class="org-right">26</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">段京文</td>
-<td class="org-right">18</td>
-<td class="org-right">27</td>
-<td class="org-right">15</td>
 </tr>
 
 <tr>
@@ -1256,14 +1288,6 @@ C/S架构编程，做完第一章所有的上机题:
 </tr>
 
 <tr>
-<td class="org-right">5</td>
-<td class="org-left">郭榕荣</td>
-<td class="org-right">16</td>
-<td class="org-right">31</td>
-<td class="org-right">14</td>
-</tr>
-
-<tr>
 <td class="org-right">3</td>
 <td class="org-left">薛进超</td>
 <td class="org-right">23</td>
@@ -1276,22 +1300,6 @@ C/S架构编程，做完第一章所有的上机题:
 <td class="org-left">陈颖聪</td>
 <td class="org-right">17</td>
 <td class="org-right">33</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">饶展源</td>
-<td class="org-right">32</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">9</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">韦金良</td>
-<td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -1337,14 +1345,6 @@ C/S架构编程，做完第一章所有的上机题:
 
 <tr>
 <td class="org-right">4</td>
-<td class="org-left">王海波</td>
-<td class="org-right">40</td>
-<td class="org-right">&#xa0;</td>
-<td class="org-right">8</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
 <td class="org-left">何晓东</td>
 <td class="org-right">42</td>
 <td class="org-right">&#xa0;</td>
@@ -1356,7 +1356,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org8271a15">
+<table id="orgcf01496">
 
 
 <colgroup>
