best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -84,10 +84,10 @@
 <span class="linenr"> 6: </span><span style="color: #5317ac;">public</span> <span style="color: #721045;">FrmGuess</span><span style="color: #000000;">()</span>
 <span class="linenr"> 7: </span><span style="color: #000000;">{</span>
 <span class="linenr"> 8: </span>    <span style="color: #721045;">InitializeComponent</span><span style="color: #a8007f;">()</span>;
-<span class="linenr"> 9: </span>    <span style="color: #721045;">ChuShiHuaYouXi</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 9: </span>    &#21021;&#22987;&#21270;&#28216;&#25103;<span style="color: #a8007f;">()</span>;
 <span class="linenr">10: </span><span style="color: #000000;">}</span>
 <span class="linenr">11: </span>
-<span class="linenr">12: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">ChuShiHuaYouXi</span> <span style="color: #000000;">()</span>
+<span class="linenr">12: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">&#21021;&#22987;&#21270;&#28216;&#25103;</span> <span style="color: #000000;">()</span>
 <span class="linenr">13: </span><span style="color: #000000;">{</span>
 <span class="linenr">14: </span>    inBox.Text = <span style="color: #2544bb;">""</span>;
 <span class="linenr">15: </span>    outLabel.Text = $<span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#20174; 1 &#21040; {zuidazhi} &#20043;&#38388;&#30340;&#25968;&#23383;"</span>;
@@ -97,7 +97,7 @@
 <span class="linenr">19: </span>    BackColor = SystemColors.Control;
 <span class="linenr">20: </span><span style="color: #000000;">}</span>
 <span class="linenr">21: </span>
-<span class="linenr">22: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">catBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">22: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">&#29468;&#19968;&#29468;</span> <span style="color: #000000;">()</span>
 <span class="linenr">23: </span><span style="color: #000000;">{</span>
 <span class="linenr">24: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">0. &#26356;&#26032;</span>
 <span class="linenr">25: </span>    cishu = cishu + 1;
@@ -136,10 +136,15 @@
 <span class="linenr">58: </span>    inBox.<span style="color: #721045;">SelectAll</span><span style="color: #a8007f;">()</span>;
 <span class="linenr">59: </span><span style="color: #000000;">}</span>
 <span class="linenr">60: </span>
-<span class="linenr">61: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">xinBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">61: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">catBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span class="linenr">62: </span><span style="color: #000000;">{</span>
-<span class="linenr">63: </span>    <span style="color: #721045;">ChuShiHuaYouXi</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">63: </span>    &#29468;&#19968;&#29468;<span style="color: #a8007f;">()</span>;
 <span class="linenr">64: </span><span style="color: #000000;">}</span>
+<span class="linenr">65: </span>
+<span class="linenr">66: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">xinBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">67: </span><span style="color: #000000;">{</span>
+<span class="linenr">68: </span>    &#21021;&#22987;&#21270;&#28216;&#25103;<span style="color: #a8007f;">()</span>;
+<span class="linenr">69: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
 </div>
@@ -1073,7 +1078,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-orgf8eb699" class="outline-2">
 <h2 id="orgf8eb699"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org3e5649d">
+<table id="org43645ae">
 
 
 <colgroup>
@@ -1438,7 +1443,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org43645ae">
+<table id="org606f416">
 
 
 <colgroup>
