best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -136,7 +136,7 @@
 <span class="linenr">58: </span>    inBox.<span style="color: #721045;">SelectAll</span><span style="color: #a8007f;">()</span>;
 <span class="linenr">59: </span><span style="color: #000000;">}</span>
 <span class="linenr">60: </span>
-<span class="linenr">61: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">catBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">61: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">caiBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span class="linenr">62: </span><span style="color: #000000;">{</span>
 <span class="linenr">63: </span>    &#29468;&#19968;&#29468;<span style="color: #a8007f;">()</span>;
 <span class="linenr">64: </span><span style="color: #000000;">}</span>
@@ -1078,7 +1078,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-orgf8eb699" class="outline-2">
 <h2 id="orgf8eb699"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org43645ae">
+<table id="org606f416">
 
 
 <colgroup>
@@ -1443,7 +1443,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org606f416">
+<table id="org6b9c137">
 
 
 <colgroup>
