best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -84,10 +84,10 @@
 <span class="linenr"> 6: </span><span style="color: #5317ac;">public</span> <span style="color: #721045;">FrmGuess</span><span style="color: #000000;">()</span>
 <span class="linenr"> 7: </span><span style="color: #000000;">{</span>
 <span class="linenr"> 8: </span>    <span style="color: #721045;">InitializeComponent</span><span style="color: #a8007f;">()</span>;
-<span class="linenr"> 9: </span>    &#21021;&#22987;&#21270;&#28216;&#25103;<span style="color: #a8007f;">()</span>;
+<span class="linenr"> 9: </span>    &#21021;&#22987;&#21270;<span style="color: #a8007f;">()</span>;
 <span class="linenr">10: </span><span style="color: #000000;">}</span>
 <span class="linenr">11: </span>
-<span class="linenr">12: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">&#21021;&#22987;&#21270;&#28216;&#25103;</span> <span style="color: #000000;">()</span>
+<span class="linenr">12: </span><span style="color: #005a5f;">void</span> <span style="color: #721045;">&#21021;&#22987;&#21270;</span> <span style="color: #000000;">()</span>
 <span class="linenr">13: </span><span style="color: #000000;">{</span>
 <span class="linenr">14: </span>    inBox.Text = <span style="color: #2544bb;">""</span>;
 <span class="linenr">15: </span>    outLabel.Text = $<span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#20174; 1 &#21040; {zuidazhi} &#20043;&#38388;&#30340;&#25968;&#23383;"</span>;
@@ -104,7 +104,7 @@
 <span class="linenr">26: </span>    <span style="color: #5317ac;">if</span> <span style="color: #a8007f;">(</span>cishu &gt;= &#26368;&#22810;&#33021;&#29468;&#22810;&#23569;&#27425;<span style="color: #a8007f;">)</span>
 <span class="linenr">27: </span>    <span style="color: #a8007f;">{</span>
 <span class="linenr">28: </span>        MessageBox.<span style="color: #721045;">Show</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"&#29468;&#27979;&#27425;&#25968;&#36807;&#22810;&#65292;&#35831;&#19981;&#35201;&#32487;&#32493;&#20102;"</span><span style="color: #005f88;">)</span>;
-<span class="linenr">29: </span>        <span style="color: #721045;">ChuShiHuaYouXi</span><span style="color: #005f88;">()</span>;
+<span class="linenr">29: </span>        &#21021;&#22987;&#21270;<span style="color: #005f88;">()</span>;
 <span class="linenr">30: </span>        <span style="color: #5317ac;">return</span>;
 <span class="linenr">31: </span>    <span style="color: #a8007f;">}</span>
 <span class="linenr">32: </span>
@@ -1078,7 +1078,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-orgf8eb699" class="outline-2">
 <h2 id="orgf8eb699"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org606f416">
+<table id="org6b9c137">
 
 
 <colgroup>
@@ -1443,7 +1443,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org6b9c137">
+<table id="org652f73d">
 
 
 <colgroup>
