best_try_and_best_chance

--- a/192/index.html
+++ b/192/index.html
@@ -143,7 +143,7 @@
 <span class="linenr">65: </span>
 <span class="linenr">66: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">xinBtn_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span class="linenr">67: </span><span style="color: #000000;">{</span>
-<span class="linenr">68: </span>    &#21021;&#22987;&#21270;&#28216;&#25103;<span style="color: #a8007f;">()</span>;
+<span class="linenr">68: </span>    &#21021;&#22987;&#21270;<span style="color: #a8007f;">()</span>;
 <span class="linenr">69: </span><span style="color: #000000;">}</span>
 </pre>
 </div>
@@ -1078,7 +1078,7 @@ C/S架构编程，做完第一章所有的上机题:
 <section id="outline-container-orgf8eb699" class="outline-2">
 <h2 id="orgf8eb699"><span class="section-number-2">2.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org6b9c137">
+<table id="org652f73d">
 
 
 <colgroup>
@@ -1443,7 +1443,7 @@ C/S架构编程，做完第一章所有的上机题:
 
 <details><summary>history score</summary>
 
-<table id="org652f73d">
+<table id="org9852f77">
 
 
 <colgroup>
